# arbot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/arbot/: __init__.py  __main__.py  config.py  dedup.py  detector.py  logging.py  matcher.py  models.py  normalize.py  notifier.py  scanner.py
src/arbot/clients/: __init__.py  base.py  polymarket.py  predictfun.py
tests/: test_detector.py  test_matcher.py  test_normalize.py
